force-app/main/default/objects/Media_Channel__c/Media_Channel__c.object-meta.xml
<CustomObject>
    <description
  >A channel through which Media Items are presented, such as a conference, blog, or podcast.</description>
    <label>Media Channel</label>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>