force-app/main/default/objects/Media_Channel__c/fields/Internal_Channel__c.field-meta.xml
<CustomField>
    <fullName>Internal_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this channel owned by our organization?</inlineHelpText>
    <label>Internal Channel?</label>
    <type>Checkbox</type>
</CustomField>