force-app/main/default/objects/Media_Channel__c/fields/Submission_Contact__c.field-meta.xml
<CustomField>
    <fullName>Submission_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person responsible for accepting media item submissions.</inlineHelpText>
    <label>Submission Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Media Channels</relationshipLabel>
    <relationshipName>Channels</relationshipName>
    <type>Lookup</type>
</CustomField>