force-app/main/default/objects/Media_Channel__c/fields/Submission_URL__c.field-meta.xml
<CustomField>
    <fullName>Submission_URL__c</fullName>
    <inlineHelpText>The URL for media item submissions, such as a Call for Proposals.</inlineHelpText>
    <label>Submission URL</label>
    <type>Url</type>
</CustomField>