force-app/main/default/objects/Media_Channel__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The type of channel, such as a Podcast or Conference.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Media_Channel_Type</valueSetName>
    </valueSet>
</CustomField>