force-app/main/default/objects/Media_Channel__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>The primary URL for this channel.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>