force-app/main/default/objects/Media_Channel__c/listViews/Internal_Channels.listView-meta.xml
<ListView>
    <fullName>Internal_Channels</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Internal_Channel__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Internal Channels</label>
</ListView>